# nixpkgs

./: CMakeLists.txt
lib/systems/: platforms.nix
navit/maptool/: CMakeLists.txt
pkgs/applications/misc/clocktimer/: default.nix
pkgs/by-name/pf/pfsshell/: package.nix
pkgs/development/compilers/z88dk/: default.nix
pkgs/games/assaultcube/: default.nix  launcher.sh
pkgs/games/qmc2/: default.nix
pkgs/games/sdlmame/: default.nix
pkgs/misc/emulators/caprice32/: default.nix
pkgs/misc/emulators/libdsk/: default.nix
pkgs/misc/emulators/sdlmame/: default.nix
pkgs/misc/emulators/xcpc/: default.nix
pkgs/os-specific/linux/kernel/: manual-config.nix
pkgs/tools/filesystems/squashfuse/: 0003-introduice-to-squashfuse.pc.in.patch  default.nix
pkgs/tools/package-management/appimagekit/: default.nix
pkgs/top-level/: all-packages.nix  python-packages.nix
